feat: upgrade jdk to 25