@@ -44,7 +44,7 @@
     </scm>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>25</java.version>
         <project.encoding>UTF-8</project.encoding>
         <license.licenseName>apache_v2</license.licenseName>
         <loadup.framework.version>0.0.2-SNAPSHOT</loadup.framework.version>
@@ -53,41 +53,43 @@
         <maven-antrun-plugin.version>3.2.0</maven-antrun-plugin.version>
         <maven-assembly-plugin.version>3.8.0</maven-assembly-plugin.version>
         <maven-clean-plugin.version>3.5.0</maven-clean-plugin.version>
-        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
-        <maven-dependency-plugin.version>3.10.0</maven-dependency-plugin.version>
-        <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
+        <maven-compiler-plugin.version>3.16.0</maven-compiler-plugin.version>
+        <maven-dependency-plugin.version>3.11.0</maven-dependency-plugin.version>
+        <maven-deploy-plugin.version>3.2.0</maven-deploy-plugin.version>
         <maven-enforcer-plugin.version>3.6.3</maven-enforcer-plugin.version>
-        <maven-failsafe-plugin.version>3.5.6</maven-failsafe-plugin.version>
-        <maven-help-plugin.version>3.5.1</maven-help-plugin.version>
-        <maven-install-plugin.version>3.1.4</maven-install-plugin.version>
-        <maven-invoker-plugin.version>3.9.1</maven-invoker-plugin.version>
-        <maven-jar-plugin.version>3.5.0</maven-jar-plugin.version>
+        <maven-failsafe-plugin.version>3.6.0</maven-failsafe-plugin.version>
+        <maven-help-plugin.version>3.5.2</maven-help-plugin.version>
+        <maven-install-plugin.version>3.2.0</maven-install-plugin.version>
+        <maven-invoker-plugin.version>3.10.1</maven-invoker-plugin.version>
+        <maven-jar-plugin.version>3.5.1</maven-jar-plugin.version>
         <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
         <maven-resources-plugin.version>3.5.0</maven-resources-plugin.version>
         <maven-shade-plugin.version>3.6.2</maven-shade-plugin.version>
         <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
-        <maven-surefire-plugin.version>3.5.6</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.6.0</maven-surefire-plugin.version>
         <maven-war-plugin.version>3.5.1</maven-war-plugin.version>
+        <maven-pmd-plugin.version>3.28.0</maven-pmd-plugin.version>
+        <maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
 
         <jacoco-plugin.version>0.8.15</jacoco-plugin.version>
-        <versions-plugin.version>2.21.0</versions-plugin.version>
+        <versions-plugin.version>2.22.0</versions-plugin.version>
         <license-plugin.version>2.7.1</license-plugin.version>
-        <spotless-plugin.version>3.8.0</spotless-plugin.version>
-        <spotbugs-plugin.version>4.10.3.0</spotbugs-plugin.version>
+        <spotless-plugin.version>3.10.2</spotless-plugin.version>
+        <spotbugs-plugin.version>4.10.4.1</spotbugs-plugin.version>
         <enforcer-plugin.version>3.6.3</enforcer-plugin.version>
 
         <!-- Code quality tool versions -->
-        <palantir-java-format.version>2.96.0</palantir-java-format.version>
+        <palantir-java-format.version>2.98.0</palantir-java-format.version>
         <findsecbugs-plugin.version>1.14.0</findsecbugs-plugin.version>
 
         <!-- Annotation processor versions -->
         <mapstruct.version>1.6.3</mapstruct.version>
         <mybatis.flex.version>1.11.8</mybatis.flex.version>
-        <spring.boot.version>4.1.0</spring.boot.version>
+        <spring.boot.version>4.1.1</spring.boot.version>
 
         <!-- Flyway plugin support -->
-        <mysql.version>9.1.0</mysql.version>
-        <flyway.version>12.6.1</flyway.version>
+        <mysql.version>9.7.0</mysql.version>
+        <flyway.version>12.11.0</flyway.version>
 
         <!-- Skip flags -->
         <skip.deploy>false</skip.deploy>
@@ -97,6 +99,10 @@
         <skip.integration.tests>false</skip.integration.tests>
         <skip.spotbugs>false</skip.spotbugs>
         <skip.enforcer>false</skip.enforcer>
+
+        <!-- Appended by JaCoCo, which appends its agent to this property; silences the JDK
+             "Java agent has been loaded dynamically" warning raised by Mockito/Byte Buddy. -->
+        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
     </properties>
 
     <dependencyManagement>
@@ -151,7 +157,7 @@
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.boot.version}</version>
                     <configuration>
-                        <jvmArguments>-XX:+UseZGC -XX:+ZGenerational -Xmx512m -Xms256m</jvmArguments>
+                        <jvmArguments>-XX:+UseZGC -Xmx512m -Xms256m</jvmArguments>
                         <layers>
                             <enabled>true</enabled>
                         </layers>
@@ -489,6 +495,16 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-pmd-plugin</artifactId>
+                    <version>${maven-pmd-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>${maven-checkstyle-plugin.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
@@ -541,6 +557,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
